# my-videos-lib

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.py  db.py  docker-compose.yml  pre-readme.md  pyproject.toml
.github/workflows/: main.yml
api/: admin.py  app.py  auth.py  commands.py  config.py  controller.py  database.db  database.py  model.py  plugins.py  settings.toml  views.py
api/static/: style.css
api/templates/: index.html.j2  login.html.j2  register.html.j2  token.html.j2
assets/: database.db
migrations/: env.py
migrations/versions/: 3e14136dd5a6_add_new_column_on_table_video.py  5797e798377d_add_new_table_category_and_new_column_.py  ac259c0866d0_add_new_column_on_table_video_fix.py
tests/: conftest.py  constants.py  settings.toml  test_app.py  test_auth.py  test_commands.py  test_controller.py  test_database.py  test_flask_dynaconf.py  test_routes.py  test_views.py
tests/assets/: example.json  example_2.json  example_3.json  example_4.json  example_5.json  example_6.json  example_7.json  example_8.json
